# Firewheel

./: .gitignore  Cargo.toml  DESIGN_DOC.md  README.md
.github/workflows/: ci.yml  pr.yml
assets/test_files/: ATTRIBUTION.txt  LICENSE.txt
benches/: core.rs
crates/firewheel-core/: Cargo.toml
crates/firewheel-core/src/: channel_config.rs  clock.rs  collector.rs  connected_mask.rs  event.rs  lib.rs  log.rs  mask.rs  node.rs  sample_resource.rs  silence_mask.rs  sync_wrapper.rs  util.rs  vector.rs
crates/firewheel-core/src/clock/: transport.rs
crates/firewheel-core/src/clock/transport/: automated_transport.rs  dynamic_transport.rs  piecewise_transport.rs  static_transport.rs
crates/firewheel-core/src/diff/: collections.rs  leaf.rs  memo.rs  mod.rs  notify.rs  update.rs
crates/firewheel-core/src/dsp/: algo.rs  buffer.rs  coeff_update.rs  decibel.rs  declick.rs  distance_attenuation.rs  distance_attenuator.rs  fade.rs  interleave.rs  mix.rs  mod.rs  pan_law.rs  smoothing_filter.rs  volume.rs
crates/firewheel-core/src/dsp/filter/: butterworth.rs  cascade.rs  filter_trait.rs  mod.rs  multi_channel_filter.rs  primitives.rs  prototype.rs  rejection_filter.rs  single_pole_iir.rs  smoothing_filter.rs  spec.rs  svf.rs
crates/firewheel-core/src/dsp/filter/primitives/: butterworth_coeffs.rs  mod.rs  one_pole_iir.rs  single_pole_iir.rs  spec.rs  svf.rs
crates/firewheel-core/src/node/: dummy.rs
crates/firewheel-core/src/param/: fixed_vec.rs  leaf.rs  mod.rs  range.rs  smoother.rs
crates/firewheel-cpal/: Cargo.toml  build.rs
crates/firewheel-cpal/src/: input.rs  lib.rs
crates/firewheel-extra/: Cargo.toml
crates/firewheel-graph/: Cargo.toml
crates/firewheel-graph/src/: backend.rs  context.rs  error.rs  graph.rs  lib.rs  processor.rs  time.rs
crates/firewheel-graph/src/basic_nodes/: beep_test.rs  dummy.rs  hard_clip.rs  mix.rs  mod.rs  mono_to_stereo.rs  peak_meter.rs  sampler.rs  stereo_to_mono.rs  sum.rs  volume.rs  volume_pan.rs
crates/firewheel-graph/src/graph/: compiler.rs
crates/firewheel-graph/src/graph/compiler/: schedule.rs
crates/firewheel-graph/src/processor/: event_scheduler.rs  handle_messages.rs  process.rs  profiling.rs  transport.rs
crates/firewheel-macros/: Cargo.toml
crates/firewheel-macros/src/: diff.rs  firewheel_manifest.rs  lib.rs  patch.rs
crates/firewheel-nodes/: Cargo.toml
crates/firewheel-nodes/src/: beep_saw_test.rs  beep_test.rs  convolution.rs  crossfade.rs  delay_compensation.rs  fast_rms.rs  filter.rs  lib.rs  mix.rs  peak_meter.rs  rejection_filter.rs  sampler.rs  spatial_basic.rs  stereo_to_mono.rs  svf.rs  triple_buffer.rs  volume.rs  volume_pan.rs
crates/firewheel-nodes/src/fast_filters/: bandpass.rs  highpass.rs  lowpass.rs
crates/firewheel-nodes/src/filter/: allpass.rs  bell.rs  const_channel_filter.rs  filter.rs  flex_channel_filter.rs  flexible_channel_filter.rs  high_shelf.rs  highpass.rs  low_shelf.rs  lowpass.rs  mod.rs  multipurpose.rs  notch.rs  rejection_filter.rs  runtime_filter.rs
crates/firewheel-nodes/src/freeverb/: delay_line.rs  mod.rs
crates/firewheel-nodes/src/noise_generator/: pink.rs  white.rs
crates/firewheel-nodes/src/sampler/: resampler.rs  resource.rs  shared_state.rs
crates/firewheel-nodes/src/stream/: input.rs  mod.rs  output.rs  reader.rs  writer.rs
crates/firewheel-pool/: Cargo.toml
crates/firewheel-pool/src/: lib.rs  sampler.rs  spatial_basic.rs  volume.rs  volume_pan.rs
crates/firewheel-rtaudio/src/: lib.rs
crates/firewheel-sampler/: Cargo.toml
crates/firewheel-sampler/src/: lib.rs  looping.rs  one_shot.rs  voice.rs
crates/firewheel-spatial/: Cargo.toml
crates/firewheel-symphonium/: Cargo.toml
examples/beep_test/: Cargo.toml
examples/beep_test/src/: main.rs
examples/cpal_input/: Cargo.toml
examples/cpal_input/src/: main.rs
examples/custom_nodes/: Cargo.toml
examples/custom_nodes/src/: main.rs  system.rs  ui.rs
examples/custom_nodes/src/nodes/: filter.rs  mod.rs  noise_gen.rs  rms.rs
examples/memoized/: Cargo.toml
examples/memoized/src/: main.rs
examples/one_shot_sampler/: Cargo.toml
examples/one_shot_sampler/src/: main.rs  system.rs  ui.rs
examples/play_sample/: Cargo.toml
examples/play_sample/src/: main.rs
examples/rtaudio_beep_test/src/: main.rs
examples/sampler_pool/: Cargo.toml
examples/sampler_pool/src/: main.rs  system.rs  ui.rs
examples/sampler_test/: Cargo.toml
examples/sampler_test/src/: main.rs  system.rs  ui.rs
examples/spatial_basic/: Cargo.toml
examples/spatial_basic/src/: main.rs  system.rs  ui.rs
examples/stream_nodes/: Cargo.toml
examples/stream_nodes/src/: main.rs
examples/visual_node_graph/: Cargo.toml
examples/visual_node_graph/src/: main.rs  system.rs  ui.rs
examples/visualizer/src/: system.rs  ui.rs
src/: lib.rs  sampler_pool.rs
