[package]
name = "firewheel"
version = "0.2.2-beta.0"
description = "Flexible, high-performance, and libre audio engine for games (WIP)"
repository = "https://github.com/BillyDM/firewheel"
edition.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
exclude = ["assets/"]

# Show documentation with all features enabled on docs.rs
[package.metadata.docs.rs]
all-features = true

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Billy Messenger <60663878+BillyDM@users.noreply.github.com>"]
keywords = ["game", "audio", "graph"]
categories = ["game-development", "multimedia::audio"]

[workspace]
members = [
    "crates/firewheel-core",
    "crates/firewheel-cpal",
    "crates/firewheel-graph",
    "crates/firewheel-nodes",
    "examples/beep_test",
    "examples/custom_nodes",
    "examples/play_sample",
    "examples/sampler_test",
    "examples/spatial_basic",
    "examples/visual_node_graph",
]

[features]
default = [
    "resampler",
    "cpal",
    "symphonium",
    "beep_test_node",
    "peak_meter_node",
    "sampler_node",
    "spatial_basic",
    "stereo_to_mono_node",
    "volume_pan_node",
    "volume_node",
]
# Enables the cpal backend
cpal = ["dep:firewheel-cpal"]
# Enables resampling support when loading audio files
resampler = ["firewheel-core/resampler"]
# Enables using Symphonium for loading audio files
symphonium = ["firewheel-core/symphonium"]
# Enables all built-in factory nodes
all_nodes = [
    "beep_test_node",
    "peak_meter_node",
    "sampler_node",
    "stereo_to_mono_node",
    "volume_pan_node",
    "volume_node",
]
# Enables the "beep test" node
beep_test_node = ["firewheel-nodes/beep_test"]
# Enables the peak meter node
peak_meter_node = ["firewheel-nodes/peak_meter"]
# Enables the sampler node
sampler_node = ["firewheel-nodes/sampler"]
# Enables the basic 3D spatial positioning node
spatial_basic = ["firewheel-nodes/spatial_basic"]
# Enables the stereo to mono node
stereo_to_mono_node = ["firewheel-nodes/stereo_to_mono"]
# Enables the volume pan node
volume_pan_node = ["firewheel-nodes/volume_pan"]
# Enables the volume node
volume_node = ["firewheel-nodes/volume"]

[dependencies]
firewheel-core = { path = "crates/firewheel-core", version = "0.2.3-beta.0" }
firewheel-graph = { path = "crates/firewheel-graph", version = "0.2.3-beta.0" }
firewheel-cpal = { path = "crates/firewheel-cpal", version = "0.2.3-beta.0", optional = true }
firewheel-nodes = { path = "crates/firewheel-nodes", version = "0.2.3-beta.0", default-features = false }

[workspace.dependencies]
log = "0.4"
ringbuf = "0.4"
thiserror = "2"
smallvec = "1"
arrayvec = "0.7"
atomic_float = "1"
bitflags = "2.6"
thunderdome = "0.6"
crossbeam-utils = "0.8"
fixed-resample = "0.1.5"

# Optimize all dependencies in debug builds:
[profile.dev.package."*"]
opt-level = 2
