[package]
name = "firewheel-core"
version = "0.6.0-beta.0"
description = "Shared types for Firewheel crates"
homepage = "https://github.com/BillyDM/firewheel/blob/main/crates/firewheel-core"
repository.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

# Show documentation with all features enabled on docs.rs
[package.metadata.docs.rs]
all-features = true

[features]
# Enables scheduling events for audio nodes.
#
# NOTE TO THIRD PARTY NODE DEVELOPERS: Please keep this feature disabled
# unless your node internally uses the `EventInstant` type in processing.
# Users can still schedule events for your node even if you have this
# feature disabled in your library.
#
# If your node makes use of `NodeEventList::drain_with_timestamps` or
# `NodeEventLIst::drain_patches_with_timestamps`, please consider adding
# a "scheduled_events" feature to your library that can also be disabled.
# For an example of this, see
# https://github.com/BillyDM/Firewheel/blob/4b06aa276d99b66e1b488d14a0fd3a6217149daa/crates/firewheel-nodes/src/sampler.rs#L771
scheduled_events = []
# Enables the musical transport feature.
#
# NOTE TO THIRD PARTY NODE DEVELOPERS: Please keep this feature disabled
# unless your node internally uses the musical types in processing. Users
# can still schedule musical events for your node even if you have this
# feature disabled in your library.
musical_transport = ["scheduled_events"]
symphonium = ["dep:symphonium"]
resampler = ["dep:fixed-resample", "symphonium?/resampler"]
# Enables the "arbitrary sinc" resampler in Symphonium for changing the
# pitch/length of samples at load time.
symphonium_stretch = [
    "symphonium",
    "resampler",
    "symphonium?/stretch-sinc-resampler",
]
# Enables `Component` derives for parameters.
bevy = ["dep:bevy_ecs"]
# Enables `Reflect` derives for core types.
bevy_reflect = ["dep:bevy_reflect"]

[dependencies]
firewheel-macros.workspace = true
arrayvec.workspace = true
bitflags.workspace = true
thunderdome.workspace = true
symphonium = { version = "0.6.1", default-features = false, optional = true }
fixed-resample = { version = "0.9.1", default-features = false, features = [
    "resampler",
    "fft-resampler",
], optional = true }
smallvec.workspace = true
bevy_platform.workspace = true
glam = "0.29"
bevy_ecs = { version = "0.16", default-features = false, optional = true }
bevy_reflect = { version = "0.16", default-features = false, optional = true }
# TODO: Remove this once `bevy_platform` exposes the atomic float types from `portable-atomic`.
portable-atomic = { version = "1", default-features = false, features = [
    "fallback",
    "float",
] }
