[package]
name = "firewheel-cpal"
version = "0.3.0"
description = "cpal backend for Firewheel"
homepage = "https://github.com/BillyDM/firewheel/blob/main/crates/firewheel-cpal"
edition.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

# Show documentation with all features enabled on docs.rs
[package.metadata.docs.rs]
all-features = true

[features]
input = ["dep:fixed-resample"]
resample_inputs = ["input", "fixed-resample?/fft-resampler"]

[dependencies]
firewheel-core = { path = "../firewheel-core", version = "0.3.0" }
firewheel-graph = { path = "../firewheel-graph", version = "0.3.0" }
cpal = "0.15.3"
log.workspace = true
ringbuf.workspace = true
thiserror.workspace = true
fixed-resample = { version = "0.6.1", default-features = false, features = [
  "channel",
], optional = true }
