[package]
name = "firewheel-cpal"
version = "0.4.3"
description = "cpal backend for Firewheel"
homepage = "https://github.com/BillyDM/firewheel/blob/main/crates/firewheel-cpal"
repository.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

# Show documentation with all features enabled on docs.rs
[package.metadata.docs.rs]
all-features = true

[features]
resample_inputs = ["fixed-resample/fft-resampler"]
wasm-bindgen = ["cpal/wasm-bindgen"]

[dependencies]
firewheel-core = { path = "../firewheel-core", version = "0.4.2" }
firewheel-graph = { path = "../firewheel-graph", version = "0.4.2" }
cpal = "0.16.0"
log.workspace = true
ringbuf.workspace = true
thiserror.workspace = true
fast-interleave.workspace = true
fixed-resample = { version = "0.9.1", default-features = false, features = [
  "channel",
] }
bevy_platform.workspace = true
