[package]
name = "firewheel-cpal"
version = "0.10.0"
description = "cpal backend for Firewheel"
homepage = "https://github.com/BillyDM/firewheel/blob/main/crates/firewheel-cpal"
repository.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

# Show documentation with all features enabled on docs.rs
[package.metadata.docs.rs]
all-features = true

[features]
default = ["tracing"]
resample_inputs = ["fixed-resample/fft-resampler"]
wasm-bindgen = ["cpal/wasm-bindgen"]
# Use the `tracing` crate for logging
tracing = ["dep:tracing"]
# Use the `log` crate for logging
log = ["dep:log"]

[dependencies]
firewheel-core = { path = "../firewheel-core", version = "0.10.0", default-features = false, features = ["std"] }
firewheel-graph = { path = "../firewheel-graph", version = "0.10.0", default-features = false, features = ["std"] }
cpal = "0.18.1"
tracing = { workspace = true, optional = true }
log = { workspace = true, optional = true }
thiserror.workspace = true
fixed-resample = { workspace = true, features = [
  "channel",
] }
bevy_platform = { workspace = true, features = ["std"] }
audioadapter-buffers = { workspace = true, features = ["std"] }
