[package]
name = "firewheel-graph"
version = "0.4.2"
description = "Core audio graph algorithm and executor for Firewheel"
homepage = "https://github.com/BillyDM/firewheel/blob/main/crates/firewheel-graph"
repository.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

# Show documentation with all features enabled on docs.rs
[package.metadata.docs.rs]
all-features = true

[dependencies]
firewheel-core = { path = "../firewheel-core", version = "0.4.2" }
log.workspace = true
ringbuf.workspace = true
triple_buffer.workspace = true
smallvec.workspace = true
arrayvec.workspace = true
thunderdome.workspace = true
thiserror.workspace = true
bevy_platform.workspace = true
