[package]
name = "firewheel-graph"
version = "0.6.3-beta.0"
description = "Core audio graph algorithm and executor for Firewheel"
homepage = "https://github.com/BillyDM/firewheel/blob/main/crates/firewheel-graph"
repository.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

# Show documentation with all features enabled on docs.rs
[package.metadata.docs.rs]
all-features = true

[features]
# Enables scheduling events for audio nodes.
scheduled_events = ["firewheel-core/scheduled_events"]
# Enables the musical transport feature.
musical_transport = ["scheduled_events", "firewheel-core/musical_transport"]

[dependencies]
firewheel-core = { path = "../firewheel-core", version = "0.6.3-beta.0" }
log.workspace = true
ringbuf.workspace = true
triple_buffer.workspace = true
smallvec.workspace = true
arrayvec.workspace = true
thunderdome.workspace = true
thiserror.workspace = true
bevy_platform = { workspace = true, features = ["std"] }
