[package]
name = "firewheel-nodes"
version = "0.6.2-beta.0"
description = "Official factory nodes for the Firewheel audio engine"
homepage = "https://github.com/BillyDM/firewheel/blob/main/crates/firewheel-nodes"
repository.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

# Show documentation with all features enabled on docs.rs
[package.metadata.docs.rs]
all-features = true

[features]
all_nodes = [
    "beep_test",
    "peak_meter",
    "sampler",
    "spatial_basic",
    "stream",
    "fast_filters",
    "noise_generators",
]
# Enables event scheduling support in some nodes.
scheduled_events = ["firewheel-core/scheduled_events"]
# Enables the "beep test" node
beep_test = []
# Enables the peak meter node
peak_meter = []
# Enables the sampler node
sampler = ["dep:smallvec", "dep:crossbeam-utils"]
# Enables the basic 3D spatial positioning node
spatial_basic = []
# Enables FastLowpassNode, FastHighpassNode, and FastBandpassNode
fast_filters = []
# Enables WhiteNoiseGenNode and PinkNoiseGenNode
noise_generators = []
# Enables the stream writer/reader nodes for sending/receiving audio
# directly to/from the audio graph from another thread.
stream = ["dep:fixed-resample"]
# Enables `Component` derive macros
bevy = ["dep:bevy_ecs"]
# Enables `Reflect` derive macros
bevy_reflect = ["dep:bevy_reflect"]

[dependencies]
firewheel-core = { path = "../firewheel-core", version = "0.6.2-beta.0" }
bevy_platform.workspace = true
crossbeam-utils = { workspace = true, optional = true }
smallvec = { workspace = true, optional = true }
fixed-resample = { version = "0.9.1", features = [
    "fft-resampler",
    "channel",
], optional = true }
bevy_ecs = { version = "0.16", optional = true, default-features = false }
bevy_reflect = { version = "0.16", optional = true, default-features = false }
