[package]
name = "firewheel-nodes"
version = "0.8.0"
description = "Official factory nodes for the Firewheel audio engine"
homepage = "https://github.com/BillyDM/firewheel/blob/main/crates/firewheel-nodes"
repository.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

# Show documentation with all features enabled on docs.rs
[package.metadata.docs.rs]
all-features = true

[features]
default = ["std"]
std = [
    "bevy_ecs?/std",
    "bevy_platform/std",
    "bevy_reflect?/std",
    "num-traits/std",
    "firewheel-core/std",
]
# Enable this if "std" is disabled.
libm = ["firewheel-core/libm", "num-traits/libm"]
all_nodes = [
    "beep_test",
    "peak_meter",
    "sampler",
    "spatial_basic",
    "stream",
    "fast_filters",
    "svf",
    "noise_generators",
    "delay_compensation",
]
# Enables event scheduling support in some nodes.
scheduled_events = ["firewheel-core/scheduled_events"]
# Enables the "beep test" node
beep_test = []
# Enables the peak meter node
peak_meter = []
# Enables the sampler node
sampler = ["dep:smallvec"]
# Enables the basic 3D spatial positioning node
spatial_basic = []
# Enables FastLowpassNode, FastHighpassNode, and FastBandpassNode
fast_filters = []
# Enables the SVF (state variable filter) node
svf = []
# Enables WhiteNoiseGenNode and PinkNoiseGenNode
noise_generators = []
# Enables the stream writer/reader nodes for sending/receiving audio
# directly to/from the audio graph from another thread.
stream = ["std", "dep:fixed-resample"]
# Enables the delay compensation node
delay_compensation = ["dep:smallvec"]
# Enables `Component` derive macros
bevy = ["dep:bevy_ecs", "firewheel-core/bevy"]
# Enables `Reflect` derive macros
bevy_reflect = ["dep:bevy_reflect", "firewheel-core/bevy_reflect"]

[dependencies]
firewheel-core = { path = "../firewheel-core", version = "0.8.0", default-features = false }
bevy_platform.workspace = true
num-traits.workspace = true
smallvec = { workspace = true, optional = true }
fixed-resample = { version = "0.9.1", features = [
    "fft-resampler",
    "channel",
], optional = true }
bevy_ecs = { workspace = true, optional = true }
bevy_reflect = { workspace = true, optional = true }
