[package]
name = "firewheel-sampler"
version = "0.1.0"
description = "Sampler nodes for the Firewheel audio engine"
homepage = "https://github.com/BillyDM/firewheel/blob/main/crates/firewheel-sampler"
edition.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["non-ecs"]
# Enables optional node wrapper structs that work better in a non-ECS API.
non-ecs = []

[dependencies]
firewheel-core = { path = "../firewheel-core", version = "0.1" }
firewheel-graph = { path ="../firewheel-graph", version = "0.1" }
smallvec.workspace = true
arrayvec.workspace = true
log.workspace = true
atomic_float.workspace = true
crossbeam-utils.workspace = true