[package]
name = "firewheel-symphonium"
version = "0.10.0"
description = "Symphonium integration for Firewheel"
homepage = "https://github.com/BillyDM/firewheel/blob/main/crates/firewheel-symphonium"
edition.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true
repository.workspace = true

[features]
default = ["tracing"]
# Use the `tracing` crate for logging. Currently requires `std`.
tracing = ["symphonium/tracing"]
# Use the `log` crate for logging
log = ["symphonium/log"]

[dependencies]
firewheel-core = { path = "../firewheel-core", version = "0.10.0", default-features = false, features = ["std"] }
symphonium.workspace = true
bevy_platform.workspace = true
