[package]
name = "custom_nodes"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
firewheel = { path = "../../" }
log.workspace = true
atomic_float.workspace = true
simple-log = "2.1.0"
egui = "0.29"
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts",
    "glow",
    "x11",
    "wayland",
] }