[package]
name = "custom_nodes"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# NOTE TO 3rd PARTY PLUGIN DEVELOPERS: For 3rd-party node libraries, only import
# the `firewheel-core` crate instead of the full firewheel crate, as it is more
# stable.
firewheel = { path = "../../" }
# The use of `bevy_platform` is optional, but it is recommended for better
# compatibility with webassembly, no_std, and platforms without 64 bit atomics.
bevy_platform.workspace = true
log.workspace = true
simple-log = "2.1.0"
egui = "0.29"
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts",
    "glow",
    "x11",
    "wayland",
] }