[package]
name = "sampler_pool"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Note, the "scheduled_events" feature is not needed to use the pool feature.
# Rust analyzer just gets confused without it in this example.
firewheel = { path = "../../", features = ["pool", "scheduled_events"] }
log.workspace = true
egui = "0.32"
eframe = { version = "0.32", default-features = false, features = [
    "default_fonts",
    "glow",
    "x11",
    "wayland",
] }
symphonium = { version = "0.6.1", features = ["mp3", "flac"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
simple-log = "2.1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"